--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
                         </ol>
                     </div>
                 </article> -->
-    </script>
+        </div>
+      </div>
   </body>
 </html>
 
