--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="profile-masthead" id="masthead">
           <header class="profile-logo">
             <div class="profile-logo-image">
-              <img alt="Square Open Source " src="/imagenes/logo.jpeg" />
+              <img alt="Square Open Source " src="/imagenes/logo.jpeg" width="500" height="600"/>
             </div> 
             <div class="profile-name">
               <h1>Tarea 1 Cristóbal González</h1>
