--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           </header>
           <aside class="profile-summary">
             <div class="summary-location summary-module">
-              <a href="http://github.com/cristobalgon">github.com/cristobalgon</a>
+              <a href="http://github.com/cristobalgon/cristobalgon.github.io">github.com/cristobalgon</a>
             </div>
           </aside>
         </section>
-<!-- 
+
         <section class="profile-content" id="content">
                 <div class="profile-description">
                   <p>Un lugar donde se pueden hacer las consultas respectivas de la Tarea 1 de Integración.</p>
@@ -45,24 +45,19 @@
                         <ol class="menu-category-list has-images">
                         <li class="menu-item">
                             <div class="menu-item-info">
-                            <h4 class="menu-item-name">android-times-square</h4>
-                            <span class="menu-item-price"><a href="https://github.com/square/android-times-square" target="_blank">GitHub</a></span>
-                            <p class="menu-item-description">Standalone Android widget for picking a single date from a calendar view.</p>
-                            </div>
-                            <div class="menu-item-image has-meta-content">
-                            <img src="/repo_images/android-times-square.jpg" />
-                            </div>
+                            <h4 class="menu-item-name">Ver usuarios</h4>
+                            <span class="menu-item-price"><a href="https://cristobalgon/cristobalgon.github.io/usuarios" target="_blank">Usuarios</a></span>
                         </li>
                         <li class="menu-item">
                             <div class="menu-item-info">
-                            <h4 class="menu-item-name">assertj-android</h4>
-                            <span class="menu-item-price"><a href="http://square.github.io/assertj-android/" target="_blank">Website</a> &middot; <a href="https://github.com/square/assertj-android" target="_blank">GitHub</a></span>
-                            <p class="menu-item-description">A set of AssertJ helpers geared toward testing Android.</p>
-                            </div>
-                            <div class="menu-item-image has-meta-content">
-                            <img src="/repo_images/assertj-android.jpg" />
-                            </div>
+                            <h4 class="menu-item-name">Ver ciudades</h4>
+                            <span class="menu-item-price"><a href="https://cristobalgon/cristobalgon.github.io/ciudades" target="_blank">Ciudades</a></span>
                         </li>
+                    </div>
+                </article>
+        </section>
+
+        <!--
                         <li class="menu-item">
                             <div class="menu-item-info">
                             <h4 class="menu-item-name">leakcanary</h4>
